# Taconite

./: Cargo.toml  LICENSE  README.md
Vault/: Pipeline creator.md  Todo.md
Vault/.obsidian/: workspace.json
examples/: ecs.rs
src/: components.rs  engine.rs  errors.rs  event_handler.rs  lib.rs  math.rs  pipeline_composer.rs  render_systems.rs  shader.wgsl  state.rs  window_starter.rs
src/base_shaders/: triangle.wgsl
src/ecs/: entity_manager.rs
