[package]
name = "taconite"
version = "0.1.0"
edition = "2021"
authors = ["Rust Bytes <rustbytes@proton.me>"]
license = "MIT"
homepage = "https://rustbytes.uk/projects/taconite"
repository = "https://git.rustbytes.uk/RustBytes/Taconite"
description = "A simple game engine wrote in rust for simplicity, speed and memory safety."

[dependencies]
env_logger = "0.10.0"
glow = "0.12.1"
glutin = "0.30.7"
log = "0.4.17"
num_cpus = "1.15.0"
# sdl2 = { version = "0.35.2", features = ["image"] }

[lib]
name = "taconite"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
